Bug 30685 - Git driver hasn't built since 'evergreen: use EXACreatePixmap2 if available' commit
Summary: Git driver hasn't built since 'evergreen: use EXACreatePixmap2 if available' ...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86-64 (AMD64) FreeBSD
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-07 11:05 UTC by dyjaks
Modified: 2010-10-07 16:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description dyjaks 2010-10-07 11:05:09 UTC
FreeBSD omega 8.1-RELEASE FreeBSD 8.1-RELEASE #0: Mon Jul 19 02:36:49 UTC 2010     root@mason.cse.buffalo.edu:/usr/obj/usr/src/sys/GENERIC  amd64

After a pull from git, the buid fails with the following message:


In file included from evergreen_exa.c:42:
radeon_vbo.h: In function 'radeon_vbo_space':
radeon_vbo.h:27: warning: unused variable 'info'
evergreen_exa.c: In function 'EVERGREENSetAccelState':
evergreen_exa.c:130: warning: implicit declaration of function 'radeon_cs_space_reset_bos'
evergreen_exa.c: In function 'EVERGREENPrepareCopy':
evergreen_exa.c:614: warning: implicit declaration of function 'radeon_bo_open'
evergreen_exa.c:614: error: 'struct <anonymous>' has no member named 'bufmgr'
evergreen_exa.c:616: warning: assignment makes pointer from integer without a cast
evergreen_exa.c: In function 'EVERGREENPrepareComposite':
evergreen_exa.c:1290: warning: implicit declaration of function 'radeon_ib_discard'
evergreen_exa.c: In function 'EVERGREENUploadToScreen':
evergreen_exa.c:1551: warning: implicit declaration of function 'radeon_bo_is_referenced_by_cs'
evergreen_exa.c:1553: warning: implicit declaration of function 'radeon_bo_is_busy'
evergreen_exa.c:1558: error: 'struct <anonymous>' has no member named 'bufmgr'
evergreen_exa.c:1558: warning: assignment makes pointer from integer without a cast
evergreen_exa.c: In function 'EVERGREENDownloadFromScreen':
evergreen_exa.c:1658: warning: implicit declaration of function 'radeon_bo_get_src_domain'
evergreen_exa.c:1673: error: 'struct <anonymous>' has no member named 'bufmgr'
evergreen_exa.c:1673: warning: assignment makes pointer from integer without a cast
evergreen_exa.c:1681: warning: implicit declaration of function 'radeon_add_pixmap'
evergreen_exa.c: In function 'EVERGREENAllocShaders':
evergreen_exa.c:1778: error: 'struct <anonymous>' has no member named 'bufmgr'
evergreen_exa.c:1779: warning: assignment makes pointer from integer without a cast
*** Error code 1


And for fun, earliers messages it made it through:
radeon_textured_videofuncs.c: In function 'RADEONPrepareTexturedVideoMMIO':
radeon_textured_videofuncs.c:96: warning: unused variable 'src_bo'
radeon_textured_videofuncs.c: In function 'R200PrepareTexturedVideoMMIO':
radeon_textured_videofuncs.c:553: warning: unused variable 'src_bo'
radeon_textured_videofuncs.c: In function 'R300PrepareTexturedVideoMMIO':
radeon_textured_videofuncs.c:1181: warning: unused variable 'src_bo'
radeon_textured_videofuncs.c: In function 'R500PrepareTexturedVideoMMIO':
radeon_textured_videofuncs.c:2663: warning: unused variable 'src_bo'
mv -f .deps/radeon_textured_video.Tpo .deps/radeon_textured_video.Plo
Comment 1 Alex Deucher 2010-10-07 14:28:27 UTC
should be fixed in:
8c544272f218fd8bd93a898b96afedc2498b27bb
Comment 2 dyjaks 2010-10-07 15:45:00 UTC
Compiles fine now, still anxiously awaiting 2D accel to work in *BSD, great work so far.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.