fix the non-kms build

Should fix:
https://bugs.freedesktop.org/show_bug.cgi?id=30685