src/evergreen_shader.c
@@ -28,6 +28,8 @@
 #include "config.h"
 #endif
 
+#ifdef XF86DRM_MODE
+
 #include "xf86.h"
 
 #include "evergreen_shader.h"
@@ -2788,3 +2790,5 @@ int evergreen_comp_ps(RADEONChipFamily ChipSet, uint32_t* shader)
 
     return i;
 }
+
+#endif
