src/radeon.h
@@ -1293,8 +1293,10 @@ extern void RADEONDoPrepareCopyMMIO(ScrnInfoPtr pScrn,
 				    Pixel planemask);
 extern Bool R600DrawInit(ScreenPtr pScreen);
 extern Bool R600LoadShaders(ScrnInfoPtr pScrn);
+#ifdef XF86DRM_MODE
 extern Bool EVERGREENDrawInit(ScreenPtr pScreen);
 extern Bool EVERGREENLoadShaders(ScrnInfoPtr pScrn);
+#endif
 #endif
 
 #if defined(XF86DRI) && defined(USE_EXA)
