src/radeon_accel.c
@@ -1072,10 +1072,13 @@ Bool RADEONAccelInit(ScreenPtr pScreen)
     if (info->useEXA) {
 # ifdef XF86DRI
 	if (info->directRenderingEnabled) {
+#ifdef XF86DRM_MODE
 	    if (info->ChipFamily >= CHIP_FAMILY_CEDAR) {
 		if (!EVERGREENDrawInit(pScreen))
 		    return FALSE;
-	    } else if (info->ChipFamily >= CHIP_FAMILY_R600) {
+	    } else
+#endif
+	      if (info->ChipFamily >= CHIP_FAMILY_R600) {
 		if (!R600DrawInit(pScreen))
 		    return FALSE;
 	    } else {
